# stdtr

./: Cargo.toml  LICENSE-THIRD-PARTY  README.md
cephes-sys/: Cargo.toml  build.rs
cephes-sys/src/: lib.rs
src/: lib.rs
stdtr-sys/: Cargo.toml  README.md
